--- a/index.html
+++ b/index.html
@@ -12,23 +12,36 @@
 
 <body>
 
-    Learn to code by watching others
+    <main class="wrapper">
+        <section class="left">
+            <h1 class="left-title">Learn to code by watching others</h1>
+            <p class="left-subtitle">See how experienced developers solve problems in real-time. Watching scripted
+                tutorials is great, but understanding how developers think is invaluable.
+            </p>
+        </section>
+        <section class="right">
+            <div class="right-offer">
+                <h2 class="right-offer_trial">
+                    Try it free 7 days
+                    <span>then $20/mo. thereafter</span>
+                </h2>
+            </div>
+            <div class="right-card">
+                <form class="form">
+                    <input type="text" placeholder="First Name" la name="first-name" id="first-name"  required>
+                    <input type="text" placeholder="Last Name" name="last-name" id="last-name"  required>
+                    <input type="email" placeholder="Email Address" name="email" id="email"  required>
+                    <input type="password" placeholder="Password" name="password" id="password"  required>
+                    <input type="submit" value="Claim your free trial" id="submit">
+                </form>
+                <p class="note">
+                    By clicking the button, you are agreeing to our
+                    <span>Terms and Services</span>
+                </p>
+            </div>
+        </section>
+    </main>
 
-    See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
-    but understanding how developers think is invaluable.
-
-    Try it free 7 days then $20/mo. thereafter
-
-    First Name
-    Last Name
-    Email Address
-    Password
-
-    Claim your free trial
-
-    By clicking the button, you are agreeing to our Terms and Services
-
-    
 </body>
 
 </html>
